Refactor codebase to replace 'ch-image' with 'clearly image'
- Updated all instances of 'ch-image' to 'clearly image' across source files, tests, and documentation to reflect the new branding.
- Adjusted Makefile configurations and test scripts to ensure consistency with the updated naming conventions.
- Enhanced logging and error messages to support the new branding.

These changes improve clarity and maintainability throughout the project.

--- a/test/gitlab.com/README
+++ b/test/gitlab.com/README
@@ -165,7 +165,7 @@ Notes/gotchas:
 
 Matrix dimensions with variable names and possible values:
 
-  1. CH_TEST_BUILDER (ch-image, docker)
+  1. CH_TEST_BUILDER (image, docker)
 
   2. CH_IMAGE_CACHE (enabled, rebuild, disabled)
 
